알약 검색및 검색 리스트 페이지, pagination

--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -47,9 +47,9 @@
   .modal {
     transition: opacity 0.25s ease;
   }
-  body.modal-active {
-    overflow-x: hidden;
-    overflow-y: visible !important;
+
+  .modal-search {
+    transition: opacity 0.25s ease;
   }
 
 @tailwind utilities;
