--- a/templates/mixins/core/project.html
+++ b/templates/mixins/core/project.html
@@ -10,11 +10,11 @@
           <div class="p-4 md:w-1/3 md:mb-0 mb-6 flex flex-col justify-center items-center max-w-sm mx-auto">
             <div class="bg-gray-300 h-56 w-full rounded-lg shadow-md bg-cover bg-center" style="background-image: url(https://images.unsplash.com/photo-1521185496955-15097b20c5fe?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1951&q=80"></div>
 
-            <div class="duration-500 transform scale-100 hover:scale-105 w-70 bg-white -mt-10 shadow-lg rounded-lg overflow-hidden p-5">
+            <div class="duration-500 transform scale-100 hover:scale-105 w-full bg-white -mt-10 shadow-lg rounded-lg overflow-hidden p-5">
               
               <div class="header-content inline-flex">
                 <div class="category-badge flex-1  h-4 w-4 m rounded-full m-1 bg-purple-100">
-                  <div class="h-2 w-2 rounded-full m-1 bg-purple-500 " ></div>
+                  <div class="h-2 w-2 rounded-full m-1 bg-purple-500" ></div>
                 </div>
                 <div class="category-title flex-1 text-sm"> PHP</div>
               </div>
@@ -30,7 +30,7 @@
           <div class="p-4 md:w-1/3 md:mb-0 mb-6 flex flex-col justify-center items-center max-w-sm mx-auto">
             <div class="bg-gray-300 h-56 w-full rounded-lg shadow-md bg-cover bg-center" style="background-image: url(https://images.unsplash.com/photo-1543966888-7c1dc482a810?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1951&q=80"></div>
 
-            <div class="duration-500 transform scale-100 hover:scale-105 w-70 bg-white -mt-10 shadow-lg rounded-lg overflow-hidden p-5">
+            <div class="duration-500 transform scale-100 hover:scale-105 w-full bg-white -mt-10 shadow-lg rounded-lg overflow-hidden p-5">
               
               <div class="header-content inline-flex ">
                 <div class="category-badge flex-1  h-4 w-4 m rounded-full m-1 bg-yellow-100">
@@ -50,7 +50,7 @@
           <div class="p-4 md:w-1/3 md:mb-0 mb-6 flex flex-col justify-center items-center max-w-sm mx-auto">
             <div class="bg-gray-300 h-56 w-full rounded-lg shadow-md bg-cover bg-center" style="background-image: url(https://images.unsplash.com/photo-1590608897129-79da98d15969?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1951&q=80"></div>
 
-            <div class="duration-500 transform scale-100 hover:scale-105 w-70 bg-white -mt-10 shadow-lg rounded-lg overflow-hidden p-5">
+            <div class="duration-500 transform scale-100 hover:scale-105 w-full bg-white -mt-10 shadow-lg rounded-lg overflow-hidden p-5">
               
               <div class="header-content inline-flex ">
                 <div class="category-badge flex-1  h-4 w-4 m rounded-full m-1 bg-green-100">
