--- a/templates/partials/nav.html
+++ b/templates/partials/nav.html
@@ -28,7 +28,7 @@
       </form>
     
       <div class="relative md:flex md:flex-row md:items-center z-10 md:border-l-2 md:pl-4 md:space-x-2">
-
+        <a href="{% url 'core:test' %}">test</a>
       </div>
 
       <!--Login, Logout-->
