--- a/templates/pills/search.html
+++ b/templates/pills/search.html
@@ -25,13 +25,14 @@
     </div>
 
     <div class="container my-12 mx-auto px-4 md:px-12">
-        <div class="flex flex-wrap -mx-1 lg:-mx-4">
+        <div class="flex flex-wrap -mx-1 lg:-mx-4 justify-center">
 
         {% for pill in pills %}
         {% include 'mixins/pills/pill_card.html' with pill=pill %}
         {% endfor %}
 
         <!--Pagination-->
+        {% if paginator.num_pages != 1%}
         <div class="w-full mb-12 flex md:flex-row md:justify-between flex-col items-center md:items-start">
             <div class="text-sm leading-5 text-blue-700 md:mb-0 mb-3 w-auto lg:ml-4 md:ml-2">
                 Showing
@@ -41,7 +42,6 @@
             </div>
 
             <div class="w-auto">
-                {% if paginator.num_pages != 1%}
                 <div class="inline-flex shadow-sm">
                     {% if has_first %}
                     <div>
@@ -124,11 +124,10 @@
                         </a>
                     </div>
                     {% endif %}
-
                 </div>
-                {% endif %}
             </div>
         </div>
+        {% endif %}
         <!--End Pagination-->
 
     </div>
