--- a/templates/mixins/pills/pill_card.html
+++ b/templates/mixins/pills/pill_card.html
@@ -2,34 +2,30 @@
         <div class="my-1 px-1 w-full md:w-1/2 lg:my-4 lg:px-4 lg:w-1/3 mb-10 lg:mb-6">
 
             <!-- Article -->
-            <article class="overflow-hidden rounded-lg shadow-lg border-b-4 border-indigo-400">
+            <article class="overflow-hidden rounded-lg shadow-lg border-b-2 border-indigo-400">
                 
-                <a href="#">
+                <a href="{{pill.image.url}}" target="_blank">
                     <img class="h-auto w-full" src="{{pill.image.url}}">
                 </a>
 
                 <div class="flex justify-between">
-                    <div class="px-4 py-2 w-2/3  bg-white">
-                        <p class="uppercase tracking-wide text-sm font-bold text-gray-700">제품명</p>
-                        <div class="w-full flex justify-between">
-                            <p class="text-lg font-bold text-gray-800">{{pill.name|truncatechars:6}}</p>
-                            {% if pill.sortation == "일반" %}
+                    <div class="px-4 py-2 bg-white w-full">
+                        <div class="w-full flex justify-between mb-2">
+                            <p class="uppercase tracking-wide text-sm font-bold text-gray-700">제품명</p>
+                            {% if pill.sortation == "일반의약품" %}
                             <span class="rounded-full text-white bg-green-400 py-1 px-3 text-xs font-bold shadow-md">일반</span>
                             {% else %}
-                            <span class="rounded-full text-white bg-red-400 py-1 px-3 text-xs font-bold shadow-md">전문</span>
+                            <span class="rounded-full text-white bg-red-400 py-1 px-3 text-xs font-bold shadow-md flex items-center">전문</span>
                             {% endif %}
                         </div>
-                        <p class="-mt-1 text-sm text-gray-700">{{pill.serial_number}}</p>
-                    </div>
-                    <div class="px-4 w-1/3 flex flex-col justify-center border-l border-gray-300">
-                        {% comment %} <div class="uppercase tracking-wide text-xs font-bold text-gray-700 mb-1 text-center">제조사</div> {% endcomment %}
-                        <p class="font-bold text-sm text-gray-700 truncate text-center">{{pill.company_name}}</p>
+                        <p class="text-lg font-bold text-gray-800 mb-1 truncate">{{pill.name}}</p>
+                        <p class="-mt-1 text-sm text-gray-700">{{pill.company_name}}</p>
                     </div>
                 </div>
 
-                <div class="px-4 pt-2 pb-2 bg-white border-t border-gray-300">
+                <div class="px-4 py-4 bg-white border-t border-gray-300">
                     <a href="{% url 'pills:detail' pk=pill.pk %}" 
-                        class="duration-300 rounded-full border-2 shadow-md border-indigo-400 py-1 px-2 flex justify-center items-center text-indigo-500 font-bold hover:bg-indigo-400 hover:text-white hover:shadow-lg">
+                        class="duration-300 rounded-lg border-2 shadow-md border-indigo-400 py-1 px-2 flex justify-center items-center text-indigo-500 font-bold hover:bg-indigo-400 hover:text-white hover:shadow-lg">
                         View Detail
                     </a>
                 </div>
