알약 정보 파싱

--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,13 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <!--Kakao-->
+        <meta property='og:type' content='website' />
+        <meta property='og:url' content='https://pillme.kro.kr' /> 
+        <meta property='og:title' content='PillMe'>
+        <meta property='og:description' content='알약을 쉽고 간편하게 찾아보세요' />
+        <meta property='og:image' content="{% static 'img/Logo.png' %}"> 
+        <!--End Kakao-->
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
         <link rel="stylesheet", href="{% static "css/styles.css" %}">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
