--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
         <meta property='og:url' content='https://pillme.kro.kr' /> 
         <meta property='og:title' content='PillMe'>
         <meta property='og:description' content='알약을 쉽고 간편하게 찾아보세요' />
-        <meta property='og:image' content="{% static 'img/Logo.png' %}"> 
+        <meta property='og:image' content="https://pillme.kro.kr/static/img/kakao.png"> 
         <!--End Kakao-->
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
         <link rel="stylesheet", href="{% static "css/styles.css" %}">
