--- a/templates/mixins/core/search.html
+++ b/templates/mixins/core/search.html
@@ -52,7 +52,7 @@
               <label class="bg-white text-gray-600 px-1 font-bold rounded-full">모양</label>
             </div>
             <select id="shape" name="shape" class="py-1 px-1 text-sm outline-none block h-8 w-full rounded-sm duration-200 hover:bg-gray-200">
-              <option value="">선택안함</option>
+              <option value="">전체</option>
                 <option value="원형">원형</option>
                 <option value="타원형">타원형</option>
                 <option value="장방형">장방형</option>
@@ -72,7 +72,7 @@
               <label class="bg-white text-gray-600 px-1 font-bold rounded-full">색상</label>
             </div>
             <select id="color" name="color" class="py-1 px-1 text-sm outline-none block h-8 w-full rounded-sm duration-200 hover:bg-gray-200">
-              <option value="">선택안함</option>
+              <option value="">전체</option>
                 <option value="빨강">빨강</option>
                 <option value="주황">주황</option>
                 <option value="노랑">노랑</option>
