--- a/templates/pills/detail.html
+++ b/templates/pills/detail.html
@@ -1,133 +1,204 @@
 {% extends 'base.html' %}
 
 {% block page_title %}
-{{pill.name}}
+    {{pill.name}}
 {% endblock page_title %}
 
 {% block content %}
+    <section class="text-gray-700 body-font pb-16 pt-2 lg:px-0">
+        <div class="bg-cover bg-center mb-16 py-10 rounded-b-md shadow-sm tracking-widest" 
+            style="background-image: url(https://images.unsplash.com/photo-1584362917165-526a968579e8?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1082&q=80)">
+            <p class="w-full text-center text-4xl">{{pill.name}}</p>    
+        </div>
+        <div class="container mx-auto flex-col items-center">
 
-<section class="text-gray-700 body-font">
-    <div class="container mx-auto flex px-5 py-10 flex-col items-center">
-        <div class="flex flex-col md:flex-row w-full md:justify-between md:h-64">
-            <img class="w-full md:w-1/3 rounded-lg shadow-md md:max-h-full" src="{{pill.image.url}}">
+            <div class="flex flex-col lg:flex-row-reverse md:items-start">
+                <div class="w-full lg:w-1/3 md:max-h-full lg:mt-12 mt-0 lg:mb-0 mb-16">
+                    <a href="{{pill.image.url}}" target="_blank">
+                    <img class="rounded-lg shadow-md transform scale-100 hover:scale-105 duration-500" src="{{pill.image.url}}">
+                    </a>
 
-            <div class="mt-5 md:mt-0 ml-0 md:ml-5 bg-gray-300 rounded-lg w-full md:w-2/3 py-4 md:px-10 px-4 flex items-center shadow-md">
-                <table class="w-full text-left">
-                    <tbody>
-                        <tr class="h-10">
-                            <th>품명/일련번호</th>
-                            <td>
-                                {{pill.name}} 
-                                {% if pill.serial_number %}
-                                | {{pill.serial_number}}
-                                {% endif %}
-                            </td>
-                        </tr>
-                        <tr class="h-10">
-                            <th>제조사/일련번호</th>
-                            <td>
-                                {{pill.company_name}}
-                                {% if company_serial_number %}
-                                | {{company_serial_number}}
-                                {% endif %}
-                            </td>
-                        </tr>
-                        <tr class="h-10">
-                            <th>전문일반구분</th>
-                            <td>{{pill.sortation}}</td>
-                        </tr>
-                        <tr class="h-10">
-                            <th>성상</th>
-                            <td>{{pill.nature}}</td>
-                        </tr>
-                    </tbody>
-                </table>
+                    {% if user.is_authenticated %}
+                    <div class="mt-6">
+                        {% if request.user not in pill.users.all %}
+                        <a href="{% url 'users:add' pk=pill.pk %}">
+                            <div class="btn text-white font-semibold bg-indigo-400 hover:scale-105 shadow-lg">인벤토리 추가</div>
+                        </a>
+                        {% else %}
+                            <a href="{% url 'users:delete' pk=pill.pk %}">
+                                <div class="btn text-white font-semibold bg-red-400 hover:scale-105 shadow-lg">인벤토리 삭제</div>
+                            </a>
+                        {% endif %}
+                    </div>
+                    {% endif %}
+                   
+                </div>
+
+                <div class="w-full lg:w-2/3">
+                    <p class="text-2xl font-bold text-black mb-6">기본 정보</p>
+                    <table class="text-left w-full">
+                        <tbody>
+                            <tr>
+                                <th class="text-gray-800">품명</th>
+                                <td class="w-3/4 lg:w-4/5 pl-5">
+                                    {{pill.name}}
+                                </td>
+                            </tr>
+                            <tr>
+                                <th class="text-gray-800">성상</th>
+                                <td class=" pl-5">{{pill.nature}}</td>
+                            </tr>
+                            <tr>
+                                <th class="text-gray-800">모양</th>
+                                <td class=" pl-5">{{pill.shape}}</td>
+                            </tr>
+                            <tr>
+                                <th class="text-gray-800">제조사</th>
+                                <td class=" pl-5">
+                                    <span
+                                        class="rounded-md text-white bg-gray-700 py-1 px-3 text-xs font-bold shadow-md">{{pill.company_name}}</span>
+                                </td>
+                            </tr>
+                            <tr>
+                                <th class="text-gray-800">전문/일반</th>
+                                <td class=" pl-5">
+                                    {% if pill.sortation == "일반의약품" %}
+                                        <span
+                                            class="rounded-md text-white bg-green-500 py-1 px-3 text-xs font-bold shadow-md">일반</span>
+                                    {% else %}
+                                        <span
+                                            class="rounded-md text-white bg-red-500 py-1 px-3 text-xs font-bold shadow-md">전문</span>
+                                    {% endif %}
+                                </td>
+                            </tr>
+
+                            {% if pill.permission_date %}
+                            <tr>
+                                <th class="text-gray-800">허가일</th>
+                                <td class=" pl-5">{{pill.permission_date|date:'Y-m-d'}}</td>
+                            </tr>
+                            {% endif %}
+
+                            <tr>
+                                <th class="text-gray-800">품목기준코드</th>
+                                <td class=" pl-5">{{pill.serial_number}}</td>
+                            </tr>
+
+                            {% if pill.cancel %}
+                            <tr>
+                                <th class="text-gray-800">취소/취하구분</th>
+                                <td class="text-red-500 pl-5">{{pill.cancel}}</td>
+                            </tr>
+                            {% endif %}
+
+                            {% if pill.cancel_date %}
+                            <tr>
+                                <th class="text-gray-800">취소/취하일자</th>
+                                <td class="text-red-500 pl-5">{{pill.cancel_date|date:'Y-m-d'}}</td>
+                            </tr>
+                            {% endif %}
+
+                            <tr>
+                                <th class="text-gray-800">기타식별표시</th>
+                                <td class="pl-5">
+                                    {% if pill.major_axis %}
+                                        장축크기:{{pill.major_axis}}mm
+                                    {% endif %}
+                                    {% if pill.minor_axis %}
+                                        단축크기:{{pill.minor_axis}}mm
+                                    {% endif %}
+                                </td>
+                            </tr>
+                            {% if pill.thickness %}
+                            <tr>
+                                <th></th>
+                                <td class="pl-5">두께:{{pill.thickness}}mm</td>
+                            </tr>
+                            {% endif %}
+                        </tbody>
+                    </table>
+                </div>
+
             </div>
         </div>
 
-        <div class="mt-5 bg-gray-300 rounded-lg w-full py-6 md:px-10 px-4 flex items-center shadow-md">
-            <table class="w-full text-left">
-                <tbody>
-                    <tr class="h-8">
-                        <th>문자</th>
-                        <td class="font-semibold">앞면</td>
-                        <td>{{pill.mark_front}}</td>
-                        <td class="font-semibold">뒷면</td>
-                        <td>{{pill.mark_back}}</td>
-                    </tr>
-
-                    <tr class="h-8">
-                        <th>모양</th>
-                        <td>{{pill.shape}}</td>
-                    </tr>
-
-                    <tr class="h-8">
-                        <th>색상</th>
-                        <td class="font-semibold">앞면</td>
-                        <td>{{pill.color_front}}</td>
-                        <td class="font-semibold">뒷면</td>
-                        <td>{{pill.color_back}}</td>
-                    </tr>
-
-                    <tr class="h-8">
-                        <th>크기</th>
-                        <td class="font-semibold">장축</td>
-                        <td>{{pill.major_axis}}</td>
-                        <td class="font-semibold">단축</td>
-                        <td>{{pill.minor_axis}}</td>
-                    </tr>
-
-                    <tr class="h-8">
-                        <th></th>
-                        <td class="font-semibold">두께</td>
-                        <td>{{pill.thickness}}</td>
-                    </tr>
-
-                    {% if date %}
-                    <tr class="h-8">
-                        <th>변경일자</th>
-                        <td>{{pill.date}}</td>
-                    </tr>
-                    {% endif %}
-                </tbody>
-            </table>
-        </div>
-
-        {% if user.is_authenticated %}
-        <div class="my-4 w-full md:flex md:justify-end">
-            {% if request.user not in pill.users.all %}
-            <a href="{% url 'users:add' pk=pill.pk %}">
-                <div class="btn md:w-64 text-white font-semibold bg-indigo-400 hover:scale-105 shadow-lg">인벤토리 추가</div>
-            </a>
-            {% else %}
-            <a href="{% url 'users:delete' pk=pill.pk %}">
-                <div class="btn md:w-64 text-white font-semibold bg-red-400 hover:scale-105 shadow-lg">인벤토리 삭제</div>
-            </a>
-            {% endif %}
+        {% if pill.material %}
+        <div class="mt-10 border-t border-gray-300 w-full">
+          <div class="container mx-auto items-center">
+            <p class="text-2xl font-bold text-black my-6">원료약품 및 분량</p>
+            {{pill.material|safe}}
+          </div>
         </div>
         {% endif %}
 
-        <div class="border-2 w-full">
-          {{pill.material|safe}}
+        {% if pill.efficacy %}
+        <div class="mt-10 border-t border-gray-300 w-full">
+          <div class="container mx-auto items-center">
+            <p class="text-2xl font-bold text-black my-6">효능효과</p>
+            {{pill.efficacy|safe}}
+          </div>
         </div>
+        {% endif %}
 
-        <div class="border-2 w-full">
-          {{pill.efficacy|safe}}
+        {% if pill.voulme %}
+        <div class="mt-10 border-t border-gray-300 w-full">
+          <div class="container mx-auto items-center">
+            <p class="text-2xl font-bold text-black my-6">용법용량</p>
+            {{pill.voulme|safe}}
+          </div>
         </div>
+        {% endif %}
 
-        <div class="border-2 w-full">
-          {{pill.voulme|safe}}
+        {% if pill.caution %}
+        <div class="mt-10 border-t border-gray-300 w-full">
+          <div class="container mx-auto items-center">
+            <p class="text-2xl font-bold text-black my-6">사용상의주의사항</p>
+            {{pill.caution|safe}}
+          </div>
         </div>
+        {% endif %}
 
-        <div class="border-2 w-full">
-          {{pill.caution|safe}}
+        {% if pill.dur %}
+        <div class="mt-10 border-t border-gray-300 w-full">
+          <div class="container mx-auto items-center">
+            <p class="text-2xl font-bold text-black my-6">의약품 적정 사용 정보 (DUR)</p>
+            {{pill.dur|safe}}
+          </div>
         </div>
-        
-        <div class="border-2 w-full">
-          {{pill.etc|safe}}
-        </div>
+        {% endif %}
 
-    </div>
-</section>
+        {% if pill.etc %}
+        <div class="mt-10 border-t border-gray-300 w-full">
+            <div class="container mx-auto items-center">
+                <p class="text-2xl font-bold text-black my-6">재심사, RMP, 보험, 기타정보</p>
+                {{pill.etc|safe}}
+            </div>
+        </div>
+        {% endif %}
+
+        {% if pill.production_performance %}
+        <div class="mt-10 border-t border-gray-300 w-full">
+          <div class="container mx-auto items-center">
+            <p class="text-2xl font-bold text-black my-6">
+                생산실적
+                <span class="text-sm font-normal text-gray-700">
+                    {{pill.unit}}
+                </span>
+            </p>
+            {{pill.production_performance|safe}}
+          </div>
+        </div>
+        {% endif %}
+
+        {% if pill.history %}
+        <div class="mt-10 border-t border-gray-300 w-full">
+          <div class="container mx-auto items-center">
+            <p class="text-2xl font-bold text-black my-6">변경이력</p>
+            {{pill.history|safe}}
+          </div>
+        </div>
+        {% endif %}
+
+    </section>
 
 {% endblock content %}
