인벤토리 일부 구현, 모바일 하단바 추가

--- a/templates/base.html
+++ b/templates/base.html
@@ -26,6 +26,10 @@
         {% block content %}
         {% endblock content %}
         {% include "partials/footer.html" %}
+        {% include "partials/mobile.html" %}
+
+        {% include "mixins/core/camera.html" %}
+        {% include "mixins/core/search.html" %}
     </body>
 
 </html>
