--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -1,4 +1,4 @@
-<footer class="absolute left-0 bottom-0 w-full text-gray-700 body-font">
+<footer class="absolute left-0 bottom-0 w-full text-gray-700 body-font mb-16 md:mb-0">
   <div class="bg-gray-200 w-full">
     <div class="container mx-auto py-1 md:py-2 px-5 flex flex-wrap flex-col sm:flex-row">
       <p class="text-gray-500 text-sm text-center sm:text-left">© 2020 Programming and Network —
