--- a/templates/partials/nav.html
+++ b/templates/partials/nav.html
@@ -18,9 +18,9 @@
 
     <nav :class="{'block': open, 'hidden': !open}" class="flex-grow px-4 md:px-0 md:pr-4 pb-4 md:pb-0 md:block md:flex md:flex-row md:justify-between md:items-center">
 
-      <form id="search" method="GET" action="#" class="w-full flex md:hidden">
+      <form id="search" method="GET" action="{% url 'pills:search' %}" class="w-full flex md:hidden">
         <div class="flex flex-row px-4 py-2 mt-2 text-sm font-semibold text-gray-600 bg-gray-200 rounded-lg w-full">
-            <input class="bg-gray-200 focus:outline-none flex-1" placeholder="Search" type="text" name="search">
+            <input class="bg-gray-200 focus:outline-none flex-1" placeholder="제품명 검색" type="text" name="name">
             <button class="flex items-center justify-center text-sm font-semibold bg-gray-300 h-6 px-2 rounded-full ml-auto focus:outline-none">
                 <i class="fas fa-search"></i>
             </button>
@@ -28,7 +28,35 @@
       </form>
     
       <div class="relative md:flex md:flex-row md:items-center z-10 md:border-l-2 md:pl-4 md:space-x-2">
-        <a href="{% url 'core:test' %}">test</a>
+        <!-- Account -->
+        {% if user.is_authenticated %}
+          <div @click.away="open = false" class="relative" x-data="{ open: false }">
+            <button @click="open = !open" class="duration-300 flex flex-row items-center w-full px-4 py-2 mt-2 md:mt-0 text-sm font-semibold text-left bg-transparent rounded-lg md:block hover:text-indigo-500 focus:text-indigo-500 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none focus:shadow-outline">
+              <span class="uppercase">Account</span>
+              <svg fill="currentColor" viewBox="0 0 20 20" :class="{'rotate-180': open, 'rotate-0': !open}" class="inline w-4 h-4 mt-1 ml-1 transition-transform duration-200 transform md:-mt-1"><path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
+            </button>
+            
+            <div x-show="open" x-transition:enter="transition ease-out duration-200" x-transition:enter-start="transform opacity-0 scale-95" x-transition:enter-end="transform opacity-100 scale-100" x-transition:leave="transition ease-in duration-200" x-transition:leave-start="transform opacity-100 scale-100" x-transition:leave-end="transform opacity-0 scale-95" class="absolute w-full md:w-56 mt-2 origin-top-right rounded-md shadow-lg z-40">
+              <div class="px-2 py-2 bg-white rounded-md shadow">
+                <a href="#" 
+                  class="block duration-300 px-4 py-2 text-sm font-semibold bg-transparent rounded-lg hover:text-indigo-500 focus:text-indigo-500 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none focus:shadow-outline">
+                    <div class="flex items-center">
+                      <i class="fa fa-user h-5 w-5 flex justify-center items-center text-lg"></i>
+                      <span class="ml-2">Profile</span>
+                    </div> 
+                </a>
+                <a href="{% url 'users:inventory' %}" 
+                  class="block duration-300 px-4 py-2 mt-1 text-sm font-semibold bg-transparent rounded-lg hover:text-indigo-500 focus:text-indigo-500 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none focus:shadow-outline">
+                    <div class="flex items-center">
+                      <i class="fa fa-shopping-bag h-5 w-5 flex justify-center items-center text-lg"></i>
+                      <span class="ml-2">Inventory</span>
+                    </div>
+                </a>
+              </div>
+            </div>
+          </div>
+        {% endif %}
+        <!-- Account -->
       </div>
 
       <!--Login, Logout-->
